# FEUP---AED

TP Classes/aed2223_p01/Tests/: funWithCycles.cpp  tests.cpp
TP Classes/aed2223_p02/Tests/: funWithComplexity.cpp  tests.cpp
TP Classes/aed2223_p03/Tests/: funWithSearch.cpp  tests.cpp
TP Classes/aed2223_p04/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p04/Tests/: funSortProblem.cpp  funSortProblem.h  piece.cpp  piece.h  product.cpp  product.h  tests.cpp
TP Classes/aed2223_p05/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p05/Tests/: funListProblem.cpp  funListProblem.h  game.cpp  game.h
TP Classes/aed2223_p06/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p06/Tests/: funStackQueueProblem.cpp  funStackQueueProblem.h  stackExt.h  tests.cpp
TP Classes/aed2223_p07/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p07/Tests/: dic.txt  dictionary.cpp  funSetProblem.cpp  funSetProblem.h  tests.cpp
TP Classes/aed2223_p08/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p08/Tests/: box.cpp  box.h  funPQProblem.cpp  funPQProblem.h  packagingMachine.cpp  packagingMachine.h  tests.cpp
TP Classes/aed2223_p09/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p09/Tests/: funHashingProblem.cpp  funHashingProblem.h  jackpot.cpp  jackpot.h  tests.cpp
TP Classes/aed2223_p10/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p10/Tests/: funWithGraphs.cpp  funWithGraphs.h  graph.cpp  graph.h  tests.cpp
TP Classes/aed2223_p11/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p11/Tests/: funWithGraphs.cpp  funWithGraphs.h  graph.cpp  graph.h  tests.cpp
TP Classes/aed2223_p12/aed2223_p12/: CMakeLists.txt  main.cpp
TP Classes/aed2223_p12/aed2223_p12/Tests/: funWithGraphs.cpp  funWithGraphs.h  graph.cpp  graph.h  tests.cpp
projetoaed/: CMakeLists.txt  main.cpp
projetoaed/codigo/: Class.cpp  Classes_per_uc.cpp  Horario.cpp  Menu.cpp  Reader.cpp  Request.cpp  Student.cpp
projetoaed/codigo/include/: Class.h  Classes_per_uc.h  Horario.h  Menu.h  Reader.h  Request.h  Student.h
projetoaed/docs/: Doxyfile
projetoaed/latex/: _class_8h_source.tex  _classes__per__uc_8h_source.tex  _horario_8h_source.tex  _menu_8h_source.tex  _reader_8h_source.tex  _request_8h_source.tex  _student_8h_source.tex  annotated.tex  bst_8h_source.tex  class_b_s_t.tex  class_b_s_t_itr_in.tex  class_b_s_t_itr_level.tex  class_b_s_t_itr_post.tex  class_b_s_t_itr_pre.tex  class_binary_node.tex  class_class.tex  class_classes__per___uc.tex  class_horario.tex  class_menu.tex  class_reader.tex  class_request.tex  class_student.tex  classiterator_b_s_t.tex  files.tex  refman.tex
projetoaed2/: CMakeLists.txt  main.cpp
projetoaed2/codigo/: Airlines.cpp  Airports.cpp  Flights.cpp  Menu.cpp
projetoaed2/codigo/include/: Airlines.h  Airports.h  Flights.h  Menu.h
