cmake_minimum_required(VERSION 3.21)
project(projetoaed)

set(CMAKE_CXX_STANDARD 14)

add_executable(projetoaed main.cpp codigo/Class.cpp codigo/include/Class.h codigo/Student.cpp codigo/include/Student.h codigo/Reader.cpp codigo/include/Reader.h codigo/Menu.cpp codigo/include/Menu.h codigo/include/bst.h codigo/include/Horario.h codigo/Horario.cpp codigo/include/Classes_per_uc.h codigo/Classes_per_uc.cpp codigo/include/Request.h codigo/Request.cpp)
